# codeleap-api

./: Makefile  README.md  pyproject.toml
apps/posts/: models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py
core/: settings.py  urls.py
